--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
 <body>
+    <div id="theme">
+        <input type="checkbox" id="themeToggleCheckbox" class="theme-checkbox">
+    </div>
+
     <div class="rectangle" id="content">
         <div class="text-container">
             <div id="question"></div>
