--- a/static/index.html
+++ b/static/index.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
 <body>
-    
+
     <div id="theme">
-        <input type="checkbox" id="themeToggleCheckbox" class="theme-checkbox">
+        <input title="Change theme!" type="checkbox" id="themeToggleCheckbox" class="theme-checkbox">
     </div>
 
     <div class="rectangle" id="content">
         <div class="text-container">
             <div id="question"></div>
             <div id="text"></div>
+            <div id="warning">&nbsp;</div>
         </div>
         <div class="button-container">
             <div class="button-group">
