--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     </div>
 
     <div class="rectangle" id="content">
+
+        <div class="containerProgressBar"></div>
+
         <div class="text-container">
             <div id="question"></div>
             <div id="text"></div>
