--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
-    <script src="./js/index.js" type="module" defer></script>
     <link rel="stylesheet" type="text/css" href="./css/index.css">
+    <script src="./js/index.js" type="module" defer></script>
 </head>
 <body>
 
@@ -24,12 +24,12 @@
         </div>
         <div class="button-container">
             <div class="button-group">
-                <button id="button1" onclick="clickButton(event)"></button>
-                <button id="button2" onclick="clickButton(event)"></button>
+                <button id="button1"></button>
+                <button id="button2"></button>
             </div>
             <div class="button-group">
-                <button id="button3" onclick="clickButton(event)"></button>
-                <button id="button4" onclick="clickButton(event)"></button>
+                <button id="button3"></button>
+                <button id="button4"></button>
             </div>
           </div>
     </div>
