--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="text-container">
             <div id="question"></div>
             <div id="text"></div>
-            <div id="warning">&nbsp;</div>
+            <div id="warning"></div>
         </div>
         <div class="button-container">
             <div class="button-group">
